--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1a787a9
+	base = 787525a
 	trimbase = 
 	parent = release/kinetic/urg_stamped
-	previous = 
+	previous = 1a787a9
