--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 30e9ac2
+	base = 0d363b5
 	trimbase = 
 	parent = debian/kinetic/urg_stamped
-	previous = 
+	previous = 30e9ac2
