--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9e96a49
+	base = 1e179df
 	trimbase = 
 	parent = release/indigo/urg_stamped
-	previous = 
+	previous = 9e96a49
