--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7b62600
+	base = 36647b0
 	trimbase = 
 	parent = debian/indigo/urg_stamped
-	previous = 
+	previous = 7b62600
