--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ecc20f2
+	base = ef17aec
 	trimbase = 
 	parent = rpm/indigo/urg_stamped
-	previous = 
+	previous = ecc20f2
