--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0e52089
+	base = 7dc704f
 	trimbase = 
 	parent = release/lunar/urg_stamped
-	previous = 
+	previous = 0e52089
