--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4499db0
+	base = ef5b5b0
 	trimbase = 
 	parent = debian/lunar/urg_stamped
-	previous = 
+	previous = 4499db0
