--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e9ff484
+	base = f66ae83
 	trimbase = 
 	parent = debian/lunar/urg_stamped
-	previous = 
+	previous = e9ff484
