--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4fa360e
+	base = d4ae73a
 	trimbase = 
 	parent = release/melodic/urg_stamped
-	previous = 
+	previous = 4fa360e
