--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 26cd443
+	base = 0632ba1
 	trimbase = 
 	parent = debian/melodic/urg_stamped
-	previous = 
+	previous = 26cd443
