--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fc14d35
+	base = 369a2cc
 	trimbase = 
 	parent = debian/melodic/urg_stamped
-	previous = 
+	previous = fc14d35
