--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 935ab6c
+	base = 15daf05
 	trimbase = 
 	parent = rpm/melodic/urg_stamped
-	previous = 
+	previous = 935ab6c
