--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
+dist: xenial
 services: docker
+language: bash
 addons:
   apt:
     packages:
@@ -14,7 +16,6 @@ env:
   matrix:
     - ROS_DISTRO_TARGET=melodic
     - ROS_DISTRO_TARGET=kinetic
-    - ROS_DISTRO_TARGET=indigo
 branches:
   only:
     - master
@@ -27,8 +28,10 @@ install: true
 script:
   - docker build
     -t ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET}
-    -f Dockerfile.${ROS_DISTRO_TARGET}
-    --pull=true ${TRAVIS_BUILD_DIR} || (gh-pr-comment "[#${TRAVIS_BUILD_NUMBER}] FAILED on ${ROS_DISTRO_TARGET}" "docker build failed"; false)
+    -f .travis/Dockerfile
+    --build-arg ROS_DISTRO=${ROS_DISTRO_TARGET}
+    --pull=true ${TRAVIS_BUILD_DIR}
+    || (gh-pr-comment "[#${TRAVIS_BUILD_NUMBER}] FAILED on ${ROS_DISTRO_TARGET}" "docker build failed"; false)
   - docker run --rm -it
     -e TRAVIS_PULL_REQUEST
     -e TRAVIS_REPO_SLUG
@@ -36,3 +39,4 @@ script:
     -e GITHUB_API_URL_BASE
     -e TRAVIS_BUILD_NUMBER
     ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET} /catkin_ws/src/${PACKAGE_NAME}/.travis/test.sh
+  - .travis/prerelease_test.sh
