--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.0.2": ["Atsushi Watanabe", "atsushi.w@ieee.org"]}
+{"0.0.3": ["Atsushi Watanabe", "atsushi.w@ieee.org"], "0.0.2": ["Atsushi Watanabe", "atsushi.w@ieee.org"]}
