--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.0.2-0": ["Mon Aug 27 2018", "Atsushi Watanabe", "atsushi.w@ieee.org"]}
+{"0.0.3-1": ["Thu Aug 15 2019", "Atsushi Watanabe", "atsushi.w@ieee.org"], "0.0.2-0": ["Mon Aug 27 2018", "Atsushi Watanabe", "atsushi.w@ieee.org"]}
