--- a/.travis.yml
+++ b/.travis.yml
@@ -26,22 +26,36 @@ before_install:
 install: true
 
 script:
+  - BUILD_LINK="[[#${TRAVIS_BUILD_NUMBER}](${TRAVIS_BUILD_WEB_URL})]"
   - docker build
     -t ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET}
     -f .travis/Dockerfile
     --build-arg ROS_DISTRO=${ROS_DISTRO_TARGET}
     --pull=true ${TRAVIS_BUILD_DIR}
-    || (gh-pr-comment "[#${TRAVIS_BUILD_NUMBER}] FAILED on ${ROS_DISTRO_TARGET}" "docker build failed"; false)
+    || (gh-pr-comment "${BUILD_LINK} FAILED on ${ROS_DISTRO_TARGET}" "docker build failed"; false)
   - docker run --rm -it
     -e TRAVIS_PULL_REQUEST
     -e TRAVIS_REPO_SLUG
     -e TRAVIS_BOT_GITHUB_TOKEN
     -e GITHUB_API_URL_BASE
-    -e TRAVIS_BUILD_NUMBER
+    -e BUILD_LINK=${BUILD_LINK}
     ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET} /catkin_ws/src/${PACKAGE_NAME}/.travis/test.sh
 
 jobs:
   include:
+    - stage: test
+      env:
+        - ROS_DISTRO_TARGET=noetic
+      script:
+        - BUILD_LINK="[[#${TRAVIS_BUILD_NUMBER}](${TRAVIS_BUILD_WEB_URL})]"
+        - |
+          docker run -it --rm \
+            -v $(pwd):/src/$(basename $(pwd)):ro \
+            alpineros/ros-abuild:3.11-noetic \
+            && gh-pr-comment "${BUILD_LINK} PASSED on ROS ${ROS_DISTRO_TARGET}" \
+              "Tested on Alpine ROS" \
+            || (gh-pr-comment "${BUILD_LINK} FAILED on ROS ${ROS_DISTRO_TARGET}" \
+              "Tested on Alpine ROS"; false) \
     - stage: prerelease-test
       if: head_branch =~ ^release-.*$
       env:
@@ -52,5 +66,11 @@ jobs:
       if: head_branch =~ ^release-.*$
       env:
         - ROS_DISTRO_TARGET=melodic
+      before_install: pip install --user gh-pr-comment
+      script: .travis/prerelease_test.sh
+    - stage: prerelease-test
+      if: head_branch =~ ^release-.*$
+      env:
+        - ROS_DISTRO_TARGET=noetic
       before_install: pip install --user gh-pr-comment
       script: .travis/prerelease_test.sh
