--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 50ac7f9
+	base = a1d762b
 	trimbase = 
 	parent = release/noetic/urg_stamped
-	previous = 
+	previous = 50ac7f9
