--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3b1b6fc
+	base = f54685f
 	trimbase = 
 	parent = debian/noetic/urg_stamped
-	previous = 
+	previous = 3b1b6fc
