--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9c58f03
+	base = 8f9a62b
 	trimbase = 
 	parent = debian/noetic/urg_stamped
-	previous = 
+	previous = 9c58f03
