--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 05268d8
+	base = 8479c8c
 	trimbase = 
 	parent = rpm/noetic/urg_stamped
-	previous = 
+	previous = 05268d8
