--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
-dist: xenial
+dist: bionic
 services: docker
 language: bash
-addons:
-  apt:
-    packages:
-      - python-pip
 
 cache:
   directories:
@@ -14,6 +10,7 @@ env:
     - PACKAGE_NAME=urg_stamped
     - DOCKER_CACHE_TARGET=urg-stamped-test
   matrix:
+    - ROS_DISTRO_TARGET=noetic
     - ROS_DISTRO_TARGET=melodic
     - ROS_DISTRO_TARGET=kinetic
 branches:
@@ -21,56 +18,44 @@ branches:
     - master
 
 before_install:
-  - pip install --user gh-pr-comment
+  - curl -sL https://raw.githubusercontent.com/at-wat/gh-pr-comment/master/install.sh | sh -s
 
 install: true
 
 script:
   - BUILD_LINK="[[#${TRAVIS_BUILD_NUMBER}](${TRAVIS_BUILD_WEB_URL})]"
-  - docker build
-    -t ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET}
-    -f .travis/Dockerfile
-    --build-arg ROS_DISTRO=${ROS_DISTRO_TARGET}
-    --pull=true ${TRAVIS_BUILD_DIR}
-    || (gh-pr-comment "${BUILD_LINK} FAILED on ${ROS_DISTRO_TARGET}" "docker build failed"; false)
-  - docker run --rm -it
-    -e TRAVIS_PULL_REQUEST
-    -e TRAVIS_REPO_SLUG
-    -e TRAVIS_BOT_GITHUB_TOKEN
-    -e GITHUB_API_URL_BASE
-    -e BUILD_LINK=${BUILD_LINK}
-    ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET} /catkin_ws/src/${PACKAGE_NAME}/.travis/test.sh
+  - cp ~/.local/bin/gh-pr-comment .travis/
+  - |
+    docker build \
+      -t ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET} \
+      -f .travis/Dockerfile \
+      --build-arg ROS_DISTRO=${ROS_DISTRO_TARGET} \
+      --pull=true ${TRAVIS_BUILD_DIR} \
+      || (gh-pr-comment "${BUILD_LINK} FAILED on ${ROS_DISTRO_TARGET}" "docker build failed"; false)
+  - |
+    docker run --rm \
+      -e BUILD_LINK=${BUILD_LINK} \
+      $(sh <(curl -s https://raw.githubusercontent.com/at-wat/gh-pr-comment/master/env.sh)) \
+      ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET} \
+      /catkin_ws/src/${PACKAGE_NAME}/.travis/test.sh
 
 jobs:
   include:
-    - stage: test
-      env:
-        - ROS_DISTRO_TARGET=noetic
-      script:
-        - BUILD_LINK="[[#${TRAVIS_BUILD_NUMBER}](${TRAVIS_BUILD_WEB_URL})]"
-        - |
-          docker run -it --rm \
-            -v $(pwd):/src/$(basename $(pwd)):ro \
-            alpineros/ros-abuild:3.11-noetic \
-            && gh-pr-comment "${BUILD_LINK} PASSED on ROS ${ROS_DISTRO_TARGET}" \
-              "Tested on Alpine ROS" \
-            || (gh-pr-comment "${BUILD_LINK} FAILED on ROS ${ROS_DISTRO_TARGET}" \
-              "Tested on Alpine ROS"; false) \
     - stage: prerelease-test
       if: head_branch =~ ^release-.*$
       env:
         - ROS_DISTRO_TARGET=kinetic
-      before_install: pip install --user gh-pr-comment
+      before_install: curl -sL https://raw.githubusercontent.com/at-wat/gh-pr-comment/master/install.sh | sh -s
       script: .travis/prerelease_test.sh
     - stage: prerelease-test
       if: head_branch =~ ^release-.*$
       env:
         - ROS_DISTRO_TARGET=melodic
-      before_install: pip install --user gh-pr-comment
+      before_install: curl -sL https://raw.githubusercontent.com/at-wat/gh-pr-comment/master/install.sh | sh -s
       script: .travis/prerelease_test.sh
     - stage: prerelease-test
       if: head_branch =~ ^release-.*$
       env:
         - ROS_DISTRO_TARGET=noetic
-      before_install: pip install --user gh-pr-comment
+      before_install: curl -sL https://raw.githubusercontent.com/at-wat/gh-pr-comment/master/install.sh | sh -s
       script: .travis/prerelease_test.sh
