--- a/.github/workflows/bloom-release.yml
+++ b/.github/workflows/bloom-release.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: bloom release
         id: bloom
         uses: at-wat/bloom-release-action@v0
@@ -26,10 +26,10 @@ jobs:
           tag_and_release: true
           open_pr: true
       - name: create GitHub release
-        uses: actions/create-release@v1
         continue-on-error: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.bloom.outputs.version }}
-          release_name: Release ${{ steps.bloom.outputs.version }}
+        run: |
+          gh release create \
+            ${{ steps.bloom.outputs.version }} \
+            --title "Release ${{ steps.bloom.outputs.version }}"
