--- a/.github/workflows/bloom-release.yml
+++ b/.github/workflows/bloom-release.yml
@@ -12,12 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: bloom release
         id: bloom
         uses: at-wat/bloom-release-action@v0
         with:
-          ros_distro: melodic noetic
+          ros_distro: noetic
           github_token_bloom: ${{ secrets.BLOOM_GITHUB_TOKEN }}
           github_user: at-wat
           git_user: Atsushi Watanabe
