--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,15 +4,25 @@ project(urg_stamped)
 set(CATKIN_DEPENDS
   roscpp
   sensor_msgs
+  std_msgs
 )
 
 ## Find catkin and any catkin packages
-find_package(catkin REQUIRED COMPONENTS ${CATKIN_DEPENDS})
-find_package(Boost 1.53 REQUIRED system chrono thread)
-
-catkin_package(
-  CATKIN_DEPENDS ${CATKIN_DEPENDS}
+find_package(catkin REQUIRED COMPONENTS
+  ${CATKIN_DEPENDS}
+  message_generation
 )
+
+add_message_files(FILES Status.msg)
+
+generate_messages(DEPENDENCIES std_msgs)
+
+catkin_package(CATKIN_DEPENDS
+  ${CATKIN_DEPENDS}
+  message_runtime
+)
+
+find_package(Boost 1.53 REQUIRED system chrono thread)
 
 add_compile_options(-std=c++11)
 include_directories(${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} include)
@@ -24,6 +34,14 @@ add_executable(urg_stamped
   src/ros_logger.cpp
 )
 target_link_libraries(urg_stamped ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+add_dependencies(urg_stamped ${urg_stamped_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+add_executable(urg_sim
+  src/urg_sim/encode.cpp
+  src/urg_sim/urg_sim.cpp
+  src/urg_sim/urg_sim_exec.cpp
+)
+target_link_libraries(urg_sim ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
 
 if(CATKIN_ENABLE_TESTING)
@@ -34,23 +52,7 @@ if(CATKIN_ENABLE_TESTING)
   roslint_cpp()
   roslint_add_test()
 
-  catkin_add_gtest(test_decode test/src/test_decode.cpp)
-  target_link_libraries(test_decode ${catkin_LIBRARIES} ${Boost_LIBRARIES})
-
-  catkin_add_gtest(test_device_time_origin test/src/test_device_time_origin.cpp)
-  target_link_libraries(test_device_time_origin ${catkin_LIBRARIES} ${Boost_LIBRARIES})
-
-  catkin_add_gtest(test_first_order_filter test/src/test_first_order_filter.cpp)
-  catkin_add_gtest(test_param test/src/test_param.cpp)
-
-  catkin_add_gtest(test_timestamp_moving_average test/src/test_timestamp_moving_average.cpp)
-  target_link_libraries(test_timestamp_moving_average ${catkin_LIBRARIES} ${Boost_LIBRARIES})
-
-  catkin_add_gtest(test_timestamp_outlier_remover test/src/test_timestamp_outlier_remover.cpp)
-  target_link_libraries(test_timestamp_outlier_remover ${catkin_LIBRARIES} ${Boost_LIBRARIES})
-
-  catkin_add_gtest(test_walltime test/src/test_walltime.cpp src/scip2/logger.cpp)
-  target_link_libraries(test_walltime ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+  add_subdirectory(test)
 endif()
 
 install(TARGETS
