--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>urg_stamped</name>
-  <version>0.1.0</version>
+  <version>0.1.1</version>
   <description>Precisely stamped URG driver for ROS</description>
 
   <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
@@ -11,9 +11,14 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>roscpp</depend>
+  <depend>sensor_msgs</depend>
+  <depend>std_msgs</depend>
+
+  <build_depend>message_generation</build_depend>
+  <build_export_depend>message_runtime</build_export_depend>
+  <exec_depend>message_runtime</exec_depend>
+
   <test_depend>rostest</test_depend>
   <test_depend>roslint</test_depend>
   <test_depend>rosunit</test_depend>
-
-  <depend>sensor_msgs</depend>
 </package>
