--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,17 +1,16 @@
+catkin_add_gtest(test_device_state_estimator
+  src/test_device_state_estimator.cpp
+  ../src/device_state_estimator.cpp
+  ../src/device_state_estimator_utm.cpp
+  ../src/device_state_estimator_ust.cpp
+  ../src/scip2/logger.cpp
+)
+target_link_libraries(test_device_state_estimator ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+
 catkin_add_gtest(test_decode src/test_decode.cpp)
 target_link_libraries(test_decode ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
-catkin_add_gtest(test_device_time_origin src/test_device_time_origin.cpp)
-target_link_libraries(test_device_time_origin ${catkin_LIBRARIES} ${Boost_LIBRARIES})
-
-catkin_add_gtest(test_first_order_filter src/test_first_order_filter.cpp)
 catkin_add_gtest(test_param src/test_param.cpp)
-
-catkin_add_gtest(test_timestamp_moving_average src/test_timestamp_moving_average.cpp)
-target_link_libraries(test_timestamp_moving_average ${catkin_LIBRARIES} ${Boost_LIBRARIES})
-
-catkin_add_gtest(test_timestamp_outlier_remover src/test_timestamp_outlier_remover.cpp)
-target_link_libraries(test_timestamp_outlier_remover ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
 catkin_add_gtest(test_scip2
   src/test_scip2.cpp
