--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,12 @@
+include_directories(include)
+
 catkin_add_gtest(test_device_state_estimator
   src/test_device_state_estimator.cpp
   ../src/device_state_estimator.cpp
-  ../src/device_state_estimator_utm.cpp
-  ../src/device_state_estimator_ust.cpp
+  ../src/scan_estimator_utm.cpp
+  ../src/scan_estimator_ust.cpp
+  ../src/clock_estimator_uust1.cpp
+  ../src/clock_estimator_uust2.cpp
   ../src/scip2/logger.cpp
 )
 target_link_libraries(test_device_state_estimator ${catkin_LIBRARIES} ${Boost_LIBRARIES})
@@ -28,3 +32,11 @@ add_rostest_gtest(e2e tests/e2e.test
 )
 target_link_libraries(e2e ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 add_dependencies(e2e urg_stamped)
+
+add_rostest_gtest(sync_timing tests/sync_timing.test
+  src/sync_timing.cpp
+  ../src/urg_sim/encode.cpp
+  ../src/urg_sim/urg_sim.cpp
+)
+target_link_libraries(sync_timing ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+add_dependencies(sync_timing urg_stamped)
